<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:alpha="255"
    android:layout_height="match_parent"
    app:cardElevation="10dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        
        <EditText
            android:id="@+id/loginEditTextRegistrationActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:inputType="textEmailAddress"
            android:hint="@string/hintLoginEditText"/>

        <EditText
            android:id="@+id/passwordEditTextRegistrationActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:inputType="textPassword"
            android:hint="@string/hintPasswordEditText"/>

        <EditText
            android:id="@+id/nameEditTextRegistrationActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:inputType="textPersonName"
            android:hint="@string/name"/>
        
    </LinearLayout>

</androidx.cardview.widget.CardView>